--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@tinymce/tinymce-react": "^3.6.0",
     "axios": "^0.19.2",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
